# u-nesting

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  npm-publish.yml  nuget-publish.yml  python-publish.yml  release.yml
bindings/csharp/: README.md
bindings/csharp/UNesting/: NativeLibrary.cs  Nester2D.cs  NestingException.cs  Packer3D.cs  UNesting.csproj  UNestingInfo.cs
bindings/csharp/UNesting/Models/: Geometry2D.cs  Geometry3D.cs  Progress.cs
crates/benchmark/: Cargo.toml
crates/benchmark/src/: analyzer.rs  dataset3d.rs  download.rs  lib.rs  main.rs  result.rs  runner.rs  runner3d.rs  scenario.rs  scenario_runner.rs  synthetic.rs
crates/core/: Cargo.toml
crates/core/src/: alns.rs  api_types.rs  brkga.rs  exact.rs  ga.rs  gdrr.rs  geometry.rs  lib.rs  memory.rs  result.rs  robust.rs  solver.rs
crates/cutting/src/: bridge.rs  common_edge.rs  config.rs  contour.rs  cost.rs  gtsp.rs  hierarchy.rs  kerf.rs  leadin.rs  lib.rs  path.rs  result.rs  sequence.rs  thermal.rs
crates/cutting/tests/: integration.rs
crates/d2/: Cargo.toml
crates/d2/benches/: nfp_bench.rs
crates/d2/src/: alns_nesting.rs  boundary.rs  brkga_nesting.rs  ga_nesting.rs  gdrr_nesting.rs  geometry.rs  lib.rs  milp_solver.rs  nester.rs  nfp.rs  nfp_cm_solver.rs  nfp_sliding.rs  sa_nesting.rs  spatial_index.rs
crates/d2/tests/: integration_tests.rs
crates/d3/src/: brkga_packing.rs  lib.rs  packer.rs  physics.rs  spatial_index.rs  stability.rs
crates/ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/ffi/src/: api.rs  callback.rs  lib.rs  types.rs
crates/python/: Cargo.toml  README.md
crates/python/src/: lib.rs
crates/u-nesting/: Cargo.toml
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
demo/: README.md  nesting_ui.py  nesting_viewer.html  server.py  sigmanest_to_json.py  simple_test.json  start.ps1  triangle_test.json
docs/: ROADMAP.md
docs/json-schema/: README.md  request-2d.schema.json  request-3d.schema.json  response.schema.json
docs/research/: phase11-ml-ai-research.md
docs/user-guide/: README.md  algorithms.md  ffi-integration.md  getting-started.md  nesting-2d.md  packing-3d.md  performance.md
examples/c/: progress_callback.c
npm/: README.md
