[package]
name = "u-nesting-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and abstractions for U-Nesting spatial optimization engine"
keywords = ["nesting", "bin-packing", "optimization", "geometry"]
categories = ["algorithms", "mathematics"]

[dependencies]
nalgebra.workspace = true
robust.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true
rayon.workspace = true
rand.workspace = true
log.workspace = true

[dev-dependencies]
proptest.workspace = true
approx.workspace = true

[features]
default = []
serde = ["dep:serde", "nalgebra/serde-serialize"]
