[package]
name = "u-nesting-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Core traits and abstractions for U-Nesting spatial optimization engine"
keywords = ["nesting", "bin-packing", "optimization", "geometry"]
categories = ["algorithms", "mathematics"]

[dependencies]
nalgebra.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true
rayon.workspace = true
rand.workspace = true
log.workspace = true
u-metaheur = { path = "../../../u-metaheur" }
u-optim = { path = "../../../u-optim" }
u-geometry = { path = "../../../u-geometry" }

[dev-dependencies]
proptest.workspace = true
approx.workspace = true

[features]
default = []
serde = ["dep:serde", "nalgebra/serde-serialize"]
