[package]
name = "u-nesting-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Core traits and abstractions for U-Nesting spatial optimization engine"
keywords = ["nesting", "bin-packing", "optimization", "geometry"]
categories = ["algorithms", "mathematics"]

[dependencies]
serde = { workspace = true, optional = true }
thiserror.workspace = true
rayon.workspace = true
rand.workspace = true
log.workspace = true
u-metaheur = { version = "0.1", path = "../../../../algorithms/u-metaheur" }
u-optim = { version = "0.1", path = "../../../../foundation/u-optim" }
u-geometry = { version = "0.1", path = "../../../../algorithms/u-geometry" }

[dev-dependencies]
proptest.workspace = true
approx.workspace = true

[features]
default = []
serde = ["dep:serde", "u-geometry/serde"]
